[gd_scene load_steps=7 format=2]

[ext_resource path="res://Components/WarpCore/WarpCore.tscn" type="PackedScene" id=1]
[ext_resource path="res://main.gd" type="Script" id=2]
[ext_resource path="res://RCAS/MACControls/MACControl.tscn" type="PackedScene" id=3]
[ext_resource path="res://Components/Device/Device.tscn" type="PackedScene" id=4]
[ext_resource path="res://RCAS/HBar/HBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://RCAS/PlasmaMix/PlasmaMix.tscn" type="PackedScene" id=6]

[node name="Main" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="warpCore" parent="." instance=ExtResource( 1 )]
position = Vector2( 56, 48 )

[node name="matterControl" parent="." instance=ExtResource( 3 )]
position = Vector2( 640, 472 )

[node name="antiMatterControl" parent="." instance=ExtResource( 3 )]
position = Vector2( 712, 472 )

[node name="device" parent="." instance=ExtResource( 4 )]
position = Vector2( 328, 56 )
scale = Vector2( 2, 2 )
eusage = 0.2
musage = -0.05
ebufSize = 100.0
mbufSize = -100.0
timeToDead = 100.0

[node name="powerHBar" parent="." instance=ExtResource( 5 )]
position = Vector2( 656, 384 )
scale = Vector2( 2, 2 )

[node name="plasmaMix" parent="." instance=ExtResource( 6 )]
position = Vector2( 520, 320 )
scale = Vector2( 2, 2 )

[node name="device2" parent="." instance=ExtResource( 4 )]
position = Vector2( 656, 56 )
scale = Vector2( 2, 2 )
eusage = 0.2
musage = 0.05
ebufSize = 100.0
mbufSize = 100.0
timeToDead = 100.0
